[Login] Entity update