@@ -2,8 +2,7 @@ package kr.luciddevlog.saebyukLog.common.interceptor;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import kr.luciddevlog.saebyukLog.common.entity.NavItem;
-import kr.luciddevlog.saebyukLog.common.entity.SubItem;
+import kr.luciddevlog.saebyukLog.common.dto.NavViewDto;
 import kr.luciddevlog.saebyukLog.user.dto.MemberInfoDto;
 import kr.luciddevlog.saebyukLog.user.entity.CustomUserDetails;
 import org.springframework.security.core.Authentication;
@@ -20,8 +19,9 @@ public class NavbarAndUserInfoInterceptor implements HandlerInterceptor {
     @Override
     public void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler, ModelAndView modelAndView) {
         if (modelAndView != null) {
-                modelAndView.addObject("pageTitle", "** 리조트에 오신 것을 환영합니다");
+                modelAndView.addObject("pageTitle", "Micro Blog: 새벽로그");
                 modelAndView.addObject("navItems", getNavItems());
+                modelAndView.addObject("urls", getPageUrls());
 
             // 사용자 정보 추가
             Authentication auth = SecurityContextHolder.getContext().getAuthentication();
@@ -32,29 +32,18 @@ public class NavbarAndUserInfoInterceptor implements HandlerInterceptor {
         }
     }
 
-    private List<NavItem> getNavItems() {
+    private List<NavViewDto> getNavItems() {
         // NavItems 생성 로직
         return Arrays.asList(
-                new NavItem("리조트 소개", Arrays.asList(
-                        new SubItem("조아리조트", "/reservation/"), // Controller 로 연결, reservation은 프로젝트이름
-                        new SubItem("vip룸", "/reservation/vip"),
-                        new SubItem("디럭스 스위트룸", "/reservation/deluxe"),
-                        new SubItem("오션뷰 일반룸", "/reservation/oceanview")
-                )),
-                new NavItem("찾아오기", List.of(
-                        new SubItem("찾아오는 길", "/reservation/location")
-                )),
-                new NavItem("주변 여행지", List.of(
-                        new SubItem("높아산", "/reservation/san"),
-                        new SubItem("조아해수욕장", "/reservation/bada")
-                )),
-                new NavItem("게시글", List.of(
-                        new SubItem("공지사항", "/reservation/board/notice/list"),
-                        new SubItem("후기", "/reservation/board/review/list")
-                )),
-                new NavItem("예약하기", List.of(
-                        new SubItem("예약 현황", "/reservation/month")
-                ))
+                new NavViewDto("My Page", ""),
+                new NavViewDto("Feed", ""),
+                new NavViewDto("Trending", "")
+        );
+    }
+
+    private List<NavViewDto> getPageUrls() {
+        return Arrays.asList(
+
         );
     }
 }
